--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,14 @@
 <!doctype html>
 <html lang="es">
   <head>
-    <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, maximum-scale=1"
-    />
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <meta name="color-scheme" content="light dark" />
     <title>Calculadora de Cómputos de Condenas</title>
-    <!-- Favicon opcional si lo tienes en /public -->
-    <link rel="icon" href="/calculadora-condenas/favicon.ico" />
   </head>
   <body>
+    <noscript>Necesitas habilitar JavaScript para ejecutar esta app.</noscript>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
