feat(minimos): modo sistema residual + panel cálculo + redondeo por funcionario + orden manual de causas

--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <meta name="color-scheme" content="light dark" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#111827" />
+    <meta name="description" content="Calculadora de Cómputos de Condenas" />
     <title>Calculadora de Cómputos de Condenas</title>
+    <!-- No añadimos Google Fonts: dejamos que index.css mande -->
   </head>
   <body>
-    <noscript>Necesitas habilitar JavaScript para ejecutar esta app.</noscript>
+    <noscript>Necesitas habilitar JavaScript para usar esta aplicación.</noscript>
     <div id="root"></div>
   </body>
 </html>
