--- a/404.html
+++ b/404.html
@@ -1,9 +1,7 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="refresh" content="0; url=/calculadora-condenas/" />
-    <title>Redirigiendo…</title>
+    <meta http-equiv="refresh" content="0; url=./index.html" />
   </head>
   <body></body>
 </html>
